# osm-postgresql-experiments

./: .clang-tidy  .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO
doc/: sql.md
src/: CMakeLists.txt  format.hpp  formatting.cpp  formatting.hpp  json-writer.hpp  main.cpp  options.hpp  table.cpp  table.hpp  util.cpp  util.hpp
test/: CMakeLists.txt  test-util.cpp
test/data/: chars.osm
